Release 0.016:

Release 0.015pre2:
	* Tagged OBJECTs and MOBILEs
	* Added a 'Tagged' library to manage tags
	* Added a TagD to track tag types
	* Moved scripting stuff into Phantasmal from testgame/SoN
	* Added toggle for first-ever login attempt to player_login()
	* Minor fix to cmd_help
	* More debugging on user/userlib interface.

Release 0.015pre1:
	* Separated user object into a user and a userlib, with the user
	  object overridable.  More work to do here
	* Moved logd_channels from data directory into /usr/System
	* Added a game driver object, made telnetd defer to it
	* Simplified /usr/game as more stuff moves into testgame
	* Moved objects out of /data, and made it easy to do the same for
	  helpfiles
	* Moved most Phantasmal headers into include/phantasmal
	* Modified TimeD to use only real-world time
	* Moved some headers into /include/phantasmal
	* Removed 'ask' function and all related hooks & docs
	* Changed hook function signatures and how enum_mobiles works
	* Full security audit for /usr/common/sys and /usr/common/obj
	* Full security audit for /usr/System
	* Added simple scripting to /usr/game
	* Added second AUTO object to /usr/game
	* Made /usr/game configure ConfigD directly
	* Made /usr/game's initd work
	* Moved most files out of /data into /usr/System, /usr/common and
	  /usr/game
	* Added /usr/game directory
	* Moved HelpD into ~System
	* Altered how tick counts for upgraded() work
	* Changed syntax for @set_obj_parent to allow removing parent

Release 0.014:
	* Bugfix to @make_room to deal with rooms whose location is nil
	* Added floating-point support to UNQ load/save
	* More exit stuff, including load/save
	* Object weight, volume and length and their capacities load/save
	* Weight/length/volume commands for modification
	* Added weight/length/vol to @make_room/@make_detail/@make_portable
	* Added w/l/v capacities to @make_room/detail/portable
	* Changed all the can_* functions to take a user as well so we