@@ -1,4 +1,8 @@
 Release 0.016:
+	* Added wiztool commands to manipulate tags, and help for them
+	* Added a number of new Tag-related APIs
+	* Made rooms and zonefiles include tag data in the save files
+	* Made room/object types more modular
 
 Release 0.015pre2:
 	* Tagged OBJECTs and MOBILEs
